--- a/www/templates/badSquash.html
+++ b/www/templates/badSquash.html
@@ -10,7 +10,7 @@
     </ion-side-menu-content>
     <ion-side-menu side="left">
         <ion-header-bar class="bar-assertive">
-            <div class="title">Bad Squash</div>
+            <div class="title">Squash Levels</div>
         </ion-header-bar>
         <ion-content padding="false" class="side-menu-left has-header" <="" ion-content="">
             <a style="display:inline-block;" ui-sref="badSquash.myProfile" menu-close="">
@@ -24,7 +24,7 @@
                 <ion-item ui-sref="badSquash.players" menu-close="">Custom Match</ion-item>
                 <ion-item ui-sref="badSquash.squashLevels" menu-close="">Squash Levels</ion-item>
                 <ion-item ui-sref="badSquash.rankings" menu-close="">Rankings</ion-item>
-                <ion-item ui-sref="badSquash.settings" menu-close="">Settings</ion-item>
+                <ion-item ui-sref="badSquash.find" menu-close="">Find</ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
