--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -1,4 +1,4 @@
-<ion-view title="Settings">
+<ion-view title="Find">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <ion-list></ion-list>
         <ion-list>
