The blue update.

--- a/www/templates/filters.html
+++ b/www/templates/filters.html
@@ -20,7 +20,7 @@
           </ion-item>
         </ion-list> -->
 
-       <!-- <button on-tap="onTap()" class="button button-assertive" id="loadbutton">More</button> -->
+       <!-- <button on-tap="onTap()" class="button button-positive" id="loadbutton">More</button> -->
 
         
         <div id="levels"></div>
