--- a/www/templates/players.html
+++ b/www/templates/players.html
@@ -21,8 +21,8 @@
             <tr class="doubles" style="display: none"><td colspan="3"><input class="nameInput" type="text" name="fname" placeholder="Player 4" id="name4"></td></tr>
         </table>
         <div class="button-bar" style="margin-bottom: 20px">
-            <a class="button button-assertive" ng-click="threeRounds()">3 Rounds</a>
-            <a class="button button-assertive" ng-click="fiveRounds()">5 Rounds</a>
+            <a class="button button-positive" ng-click="threeRounds()">3 Rounds</a>
+            <a class="button button-positive" ng-click="fiveRounds()">5 Rounds</a>
         </div>
         <table class="roundScores">
             <tr>
@@ -57,8 +57,8 @@
             <input type="datetime-local" id="dateInput">
         </label>
         <div style="text-align: center">
-            <button ng-click="submitScores()" class="button button-assertive" id="submitbutton">Submit</button>
-            <!-- <button ng-click="showAlert()" class="button button-assertive" id="submitbutton">Submit</button> -->
+            <button ng-click="submitScores()" class="button button-positive" id="submitbutton">Submit</button>
+            <!-- <button ng-click="showAlert()" class="button button-positive" id="submitbutton">Submit</button> -->
         </div>
     </ion-content>
 </ion-view>
