--- a/www/templates/squashLevels.html
+++ b/www/templates/squashLevels.html
@@ -1532,7 +1532,7 @@
 			  	</label>
 
 			  	<div style="text-align: center">
-			  		<button ng-click="onTap()" class="button button-assertive searchbutton" id="loadbutton">Search</button>
+			  		<button ng-click="onTap()" class="button button-positive searchbutton" id="loadbutton">Search</button>
 			  	</div>
 			</div>
 		</div>
