--- a/www/lib/ionic/css/custom.css
+++ b/www/lib/ionic/css/custom.css
@@ -1,6 +1,6 @@
 
 .tabheader {
-	color: #ef473a;
+	color: #387EF5;
 	margin-top: 20px;
 }
 
@@ -27,7 +27,7 @@
 table.customMatch {
 	width: 100%;
 	font-size: 26px;
-	color: #ef473a;
+	color: #387EF5;
 	padding: 7px;
 	font-weight: bold;
 	margin-bottom: 20px;
@@ -42,7 +42,7 @@ table.customMatch > tbody > tr > td > input {
 	width: 100%;
 	height: 40px;
 	font-size: 20px;
-	color: #ef473a;
+	color: #387EF5;
 	font-weight: 900;
 	padding-left: 10px;
 	border: solid #888 1px;
@@ -63,7 +63,7 @@ table.roundScores > tbody > tr{
 table.roundScores > tbody > tr > td {
 	width: 20%;
 	font-size: 20px;
-	color: #ef473a;
+	color: #387EF5;
 	font-weight: 900;
 	text-align: center;
 	padding: auto;
@@ -77,7 +77,7 @@ table.roundScores > tbody > tr > td.middle {
 table.roundScores > tbody > tr > td > input {
 	text-align: center;
 	font-size: 20px;
-	color: #ef473a;
+	color: #387EF5;
 	font-weight: 900;
 	width: 100%;
 	height: 50px;
@@ -102,7 +102,7 @@ div.row > div.col {
 
 div.row > div.col > p {
 	font-weight: bold;
-	color: #ef473a;
+	color: #387EF5;
 	font-size: 16px;
 	margin-top: 5px;
 }
