added rembered login, and logout/clear cache buttons

--- a/www/templates/badSquash.html
+++ b/www/templates/badSquash.html
@@ -24,7 +24,7 @@
                 <ion-item ui-sref="badSquash.players" menu-close="">Custom Match</ion-item>
                 <ion-item ui-sref="badSquash.squashLevels" menu-close="">Squash Levels</ion-item>
                 <ion-item ui-sref="badSquash.rankings" menu-close="">Rankings</ion-item>
-                <ion-item ui-sref="badSquash.find" menu-close="">Find</ion-item>
+                <ion-item ui-sref="badSquash.settings" menu-close="">Settings</ion-item>
             </ion-list>
         </ion-content>
     </ion-side-menu>
