--- a/www/lib/ionic/css/custom.css
+++ b/www/lib/ionic/css/custom.css
@@ -23,7 +23,11 @@
 #submitbutton {
 	margin: 5px 0px 30px 0px;
 }
-
+.centered {
+	float: none;
+	text-align: center;
+	margin: 20px;
+}
 table.customMatch {
 	width: 100%;
 	font-size: 26px;
