linked rankings page results to player infor page

--- a/www/templates/customMatch.html
+++ b/www/templates/customMatch.html
@@ -1,4 +1,4 @@
-<ion-view title="Custom Match">
+<ion-view title="Add a Result">
     <ion-nav-buttons side="right">
       <button class="button doubles" ng-click="toggleDoubles()">Doubles</button>
       <button class="button doubles" ng-click="toggleDoubles()" style="display: none">Singles</button>
