--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -13,7 +13,7 @@
 	    </div>
 
 	    <div id="msg"></div>
-	    <div id="loader" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
+	    <div id="loading1" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
 
 	    <!-- <div id="playerlist">
 		    <ion-list>
@@ -22,7 +22,7 @@
 	          </ion-item>
 	        </ion-list>
 	    </div> -->
-	    <div id="results">
+	    <div id="results" style="display:none">
     		<h2 class="title tabheader">Name </h2>
     			<div class="card">
 					<div class="item item-text-wrap">
