--- a/www/templates/myProfile.html
+++ b/www/templates/myProfile.html
@@ -1,82 +1,84 @@
 <ion-view title="My Profile">
     <ion-content overflow-scroll="true" padding="true" class="has-header">
         <form class="list"></form>
-        <div style="text-align:center;">
-            <img src="img/ftOdfjrzSGWKGZbQoN6y_person-icon.png" width="100%" height="auto">
+        <div id="loading3" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
+        <div id="content" style="display:none">
+            <div style="text-align:center;">
+                <img src="img/ftOdfjrzSGWKGZbQoN6y_person-icon.png" width="100%" height="auto">
+            </div>
+            <form class="list">
+                <label class="item item-input">
+                    <span class="input-label">Name</span><textarea readonly id="playerName" class="profileItem" placeholder=""></textarea>
+                </label>
+                <label class="item item-input">
+                    <span class="input-label">Email</span><textarea readonly id="playerEmail" class="profileItem" placeholder=""></textarea>
+                </label>
+                <label class="item item-input">
+                    <span class="input-label">Position</span><textarea readonly id="playerPosition" class="profileItem" placeholder=""></textarea>
+                </label>
+                <h2 class="title tabheader">Matches</h2>
+                <div class="row">
+                    <div class="col">Played<br><p id="matchesplayed"></p></div>
+                    <div class="col">Won<br><p id="matcheswon"></p></div>
+                    <div class="col">Lost<br><p id="matcheslost"></p></div>
+                    <div class="col">Ratio<br><p id="matchesratio"></p></div>
+                </div>
+
+                <h2 class="title tabheader">Games</h2>
+                <div class="row">
+                    <div class="col">Played<br><p id="gamesplayed"></p></div>
+                    <div class="col">Won<br><p id="gameswon"></p></div>
+                    <div class="col">Lost<br><p id="gameslost"></p></div>
+                    <div class="col">Ratio<br><p id="gamesratio"></p></div>
+                </div>
+
+                <h2 class="title tabheader">Points</h2>
+                <div class="row">
+                    <div class="col">Played<br><p id="pointsplayed"></p></div>
+                    <div class="col">Won<br><p id="pointswon"></p></div>
+                    <div class="col">Lost<br><p id="pointslost"></p></div>
+                    <div class="col">Ratio<br><p id="pointsratio"></p></div>
+                </div>
+
+                <h2 class="title tabheader">Levels</h2>
+                <div class="row">
+                    <div class="col">Initial<br><p id="levelsinitial"></p></div>
+                    <div class="col">12 Months<br><p id="levels12"></p></div>
+                    <div class="col">Season<br><p id="levelsseason"></p></div>
+                    <div class="col">Now<br><p id="levelsnow"></p></div>
+                </div>
+                <div class="row">
+                    <div class="col">Average (last 4)<br><p id="levelsaverage"></p></div>
+                    <div class="col">Average at (last 4)<br><p id="levelsaverageat"></p></div>
+                </div>
+                <div class="row header">
+                    <div class="col">Highest<br></div>
+                    <div class="col">Lowest<br></div>
+                </div>
+                <div class="row">
+                    <div class="col col-20">Level<br><p id="levelsmax"></p></div>
+                    <div class="col col-30">Date<br><p id="levelsmaxdate"></p></div>
+                    <div class="col col-20">Level<br><p id="levelsmin"></p></div>
+                    <div class="col col-30">Date<br><p id="levelsmindate"></p></div>
+                </div>
+
+                <h2 class="title tabheader">Level Change</h2>
+                <div class="row">
+                    <div class="col">Overall<br><p id="levelchangeoverall"></p></div>
+                    <div class="col">12 Months<br><p id="levelchange12"></p></div>
+                    <div class="col">Season<br><p id="levelchangeseason"></p></div>
+                    <div class="col">Last<br><p id="levelchangelast"></p></div>
+                </div>
+
+                <h2 class="title tabheader">Past Fixtures</h2>
+                <div id="matchList">
+                    <ion-list>
+                      <ion-item ng-repeat="match in matches" ng-click="load(match.index)" style="color:{{match.color}}">
+                        {{match.name}}
+                      </ion-item>
+                    </ion-list>
+                </div>
+            </form>
         </div>
-        <form class="list">
-            <label class="item item-input">
-                <span class="input-label">Name</span><textarea readonly id="playerName" class="profileItem" placeholder=""></textarea>
-            </label>
-            <label class="item item-input">
-                <span class="input-label">Email</span><textarea readonly id="playerEmail" class="profileItem" placeholder=""></textarea>
-            </label>
-            <label class="item item-input">
-                <span class="input-label">Position</span><textarea readonly id="playerPosition" class="profileItem" placeholder=""></textarea>
-            </label>
-            <h2 class="title tabheader">Matches</h2>
-            <div class="row">
-                <div class="col">Played<br><p id="matchesplayed"></p></div>
-                <div class="col">Won<br><p id="matcheswon"></p></div>
-                <div class="col">Lost<br><p id="matcheslost"></p></div>
-                <div class="col">Ratio<br><p id="matchesratio"></p></div>
-            </div>
-
-            <h2 class="title tabheader">Games</h2>
-            <div class="row">
-                <div class="col">Played<br><p id="gamesplayed"></p></div>
-                <div class="col">Won<br><p id="gameswon"></p></div>
-                <div class="col">Lost<br><p id="gameslost"></p></div>
-                <div class="col">Ratio<br><p id="gamesratio"></p></div>
-            </div>
-
-            <h2 class="title tabheader">Points</h2>
-            <div class="row">
-                <div class="col">Played<br><p id="pointsplayed"></p></div>
-                <div class="col">Won<br><p id="pointswon"></p></div>
-                <div class="col">Lost<br><p id="pointslost"></p></div>
-                <div class="col">Ratio<br><p id="pointsratio"></p></div>
-            </div>
-
-            <h2 class="title tabheader">Levels</h2>
-            <div class="row">
-                <div class="col">Initial<br><p id="levelsinitial"></p></div>
-                <div class="col">12 Months<br><p id="levels12"></p></div>
-                <div class="col">Season<br><p id="levelsseason"></p></div>
-                <div class="col">Now<br><p id="levelsnow"></p></div>
-            </div>
-            <div class="row">
-                <div class="col">Average (last 4)<br><p id="levelsaverage"></p></div>
-                <div class="col">Average at (last 4)<br><p id="levelsaverageat"></p></div>
-            </div>
-            <div class="row header">
-                <div class="col">Highest<br></div>
-                <div class="col">Lowest<br></div>
-            </div>
-            <div class="row">
-                <div class="col col-20">Level<br><p id="levelsmax"></p></div>
-                <div class="col col-30">Date<br><p id="levelsmaxdate"></p></div>
-                <div class="col col-20">Level<br><p id="levelsmin"></p></div>
-                <div class="col col-30">Date<br><p id="levelsmindate"></p></div>
-            </div>
-
-            <h2 class="title tabheader">Level Change</h2>
-            <div class="row">
-                <div class="col">Overall<br><p id="levelchangeoverall"></p></div>
-                <div class="col">12 Months<br><p id="levelchange12"></p></div>
-                <div class="col">Season<br><p id="levelchangeseason"></p></div>
-                <div class="col">Last<br><p id="levelchangelast"></p></div>
-            </div>
-
-            <h2 class="title tabheader">Past Fixtures</h2>
-            <div id="matchList">
-                <ion-list>
-                  <ion-item ng-repeat="match in matches" ng-click="load(match)">
-                    {{match}}
-                  </ion-item>
-                </ion-list>
-            </div>
-
-        </form>
     </ion-content>
 </ion-view>
