--- a/www/templates/badSquash.html
+++ b/www/templates/badSquash.html
@@ -20,10 +20,10 @@
             </a>
             <ion-list>
                 <ion-item ui-sref="badSquash.login" menu-close="">Login</ion-item>
-                <ion-item ui-sref="badSquash.teams" menu-close="">Teams</ion-item>
-                <ion-item ui-sref="badSquash.customMatch" menu-close="">Custom Match</ion-item>
-                <ion-item ui-sref="badSquash.squashLevels" menu-close="">Squash Levels</ion-item>
                 <ion-item ui-sref="badSquash.find" menu-close="">Find</ion-item>
+                <!-- <ion-item ui-sref="badSquash.teams" menu-close="">Teams</ion-item> -->
+                <ion-item ui-sref="badSquash.rankings" menu-close="">Rankings</ion-item>
+                <ion-item ui-sref="badSquash.customMatch" menu-close="">Add a Result</ion-item>
                 <ion-item ui-sref="badSquash.settings" menu-close="">Settings</ion-item>
             </ion-list>
         </ion-content>
