--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -52,6 +52,8 @@
 				        <div id="level_hist"></div>
 		    		</div>
 		    	</div>
+		    
+			<h2 class="title tabheader">Level History </h2>
 		    	<div class="card">	
 					<div id="line_chart" style="width: 300px; height: 200px"></div>
 		    	</div>
