--- a/www/templates/find.html
+++ b/www/templates/find.html
@@ -2,7 +2,7 @@
     <ion-content overflow-scroll="true" padding="true" class="has-header">
 
 
-	    <div id="form">
+	    <div id="form" ><form action="#">
 	        <p>
 	            <label class="searchbar item item-input">
 					<i class="icon ion-search placeholder-icon"></i>
@@ -10,7 +10,13 @@
 				</label>
 	            <button ng-click="onTap()" class="button button-stable smallbutt" id="loadbutton">Search</button>
 	        </p>
-	    </div>
+	    </form> </div>
+
+<!-- 	    <form action="action_page.php">
+			First name:<br>
+			<input type="text" name="firstname">
+			<input type="submit">
+		</form> -->
 
 	    <div id="msg"></div>
 	    <div id="loader" style="text-align:center; margin-top: 20px"><img src="../img/ajax-loader.gif"></img></div>
@@ -23,35 +29,43 @@
 	        </ion-list>
 	    </div> -->
 	    <div id="results">
-    		<h2 class="title tabheader">Name </h2>
+    		<!-- <h2 class="title tabheader">Name </h2> -->
+    		<h2 class="title tabheader">Personal Info </h2>
     			<div class="card">
 					<div class="item item-text-wrap">
-					    <div id="tab-main"></div>
-					    <div id ="level"></div>
-				  	</div>
+					    <div id="tab-main" style="font-weight:bold"></div>
+					    <div id ="level" style="font-weight:bold"></div>
+			<!--	  	</div>
 				</div>
 
-    		<h2 class="title tabheader">Rankings </h2>
+    		 <h2 class="title tabheader">Rankings </h2> 
     			<div class="card">
 			        <div class="item item-text-wrap">
-			        	<div id = "tab-ranking">
+			        	<div id = "tab-ranking">-->
+
  				  			<div id="club_rank"></div>	
 			           		<div id="club_pos"></div>
 			           		<div id="county_pos"></div>
 			           		<div id="country_pos"></div>
-			        	</div>
+			        	
 			    	</div>
 				</div>
-			<h2 class="title tabheader">Statistics </h2>
+<!-- 			<h2 class="title tabheader">Statistics </h2>
 				<div class="card">
 					<div id="tab-stats" class="item item-text-wrap">
-						<div id="team_name"></div>
 		        		<div id="p_matches"></div>
 				        <div id="p_games"></div>
 				        <div id="p_points"></div>
-				        <div id="level_hist"></div>
 		    		</div>
-		    	</div>
+		    	</div> -->
+
+		    <h2 class="title tabheader">Statistics</h2>
+	            <div class="row">
+	                <div class="col"><p id="p_won" style="color:green"></p></div>
+	                <div class="col"><p id="p_lost" style="color:red"></p></div>
+	                
+	        
+	            </div>
 		    
 			<h2 class="title tabheader">Level History </h2>
 		    	<div class="card">	
